[package]
name = "xet_error"
version = "1.0.50"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["rust-patterns"]
description = "derive(Error)"
documentation = "https://docs.rs/xet_error"
edition = "2021"
keywords = ["error", "error-handling", "derive"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/xet_error"
rust-version = "1.56"

[dependencies]
xet_error-impl = { version = "=1.0.50", path = "impl" }
tracing = "0.1.31"
lazy_static = "1.4.0"

[dev-dependencies]
anyhow = "1.0.73"
ref-cast = "1.0.18"
rustversion = "1.0.13"
trybuild = { version = "1.0.81", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
