[package]
name = "xetblob"
version = "0.13.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "xetcmd"
path = "src/bin/xetcmd.rs"

[dependencies]
gitxetcore = { path = "../gitxetcore"}
clap = { version = "3.1.6", features = ["derive"] }
anyhow = "1"
url = "2.3"
tokio = { version = "1.36", features = ["full"] }
tabled = "0.12.0"
